--- a/src/app/Pages/work-detail/work-detail.component.html
+++ b/src/app/Pages/work-detail/work-detail.component.html
@@ -1,12 +1,12 @@
 <section class="detail">
     <div class="custom-container">
         <div class="top_project">
-            <h2 class="project__name">Designing Dashboards with </h2>
+            <h2 class="project__name">{{work.workname}} </h2>
             <h2 class="project__name">usability in mind</h2>
 
             <div class="project__meta">
-                <span class="project__create">2020</span>
-                <a href="" class="project_category">Dashboard, User Experience Design</a>
+                <span class="project__create">{{work.year}}</span>
+                <a href="" class="project_category">{{work.status}}</a>
             </div>
             <p class="project__desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
                 sint. Velit officia
