--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -11,6 +11,8 @@
                     <li><a href="/work" class="text-[20px] font-bold">Works</a></li>
                     <li><a href="/blog" class="text-[20px] font-bold">Blog</a></li>
                     <li><a href="index.html" class="text-[20px] font-bold">Contact</a></li>
+                    <li><a href="/signin" class="text-[20px] font-bold">SignIn</a></li>
+                    <li><a href="/signup" class="text-[20px] font-bold">SignUP</a></li>
                 </ul>
             </div>
         </div>
