--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="max-w-md w-full mx-auto">
-    <h1 class="text-4xl text-center mb-12 font-thin">Sing In </h1>
+    <h1 class="text-4xl text-center mb-12 font-thin">Sign In </h1>
 
     <div class="bg-white rounded-lg overflow-hidden shadow-2xl">
         <div class="p-8">
