--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -8,11 +8,11 @@
             </div>
             <div class="flex justify-end">
                 <ul class="hidden md:flex space-x-4">
-                    <li><a href="/work" class="text-[20px] font-bold">Works</a></li>
-                    <li><a href="/blog" class="text-[20px] font-bold">Blog</a></li>
-                    <li><a href="index.html" class="text-[20px] font-bold">Contact</a></li>
-                    <li><a href="/signin" class="text-[20px] font-bold">SignIn</a></li>
-                    <li><a href="/signup" class="text-[20px] font-bold">SignUP</a></li>
+                    <li><a routerLink="/work" class="text-[20px] font-bold">Works</a></li>
+                    <li><a routerLink="/blog" class="text-[20px] font-bold">Blog</a></li>
+                    <li><a routerLink="index.html" class="text-[20px] font-bold">Contact</a></li>
+                    <li><a routerLink="/signin" class="text-[20px] font-bold">SignIn</a></li>
+                    <li><a routerLink="/signup" class="text-[20px] font-bold">SignUP</a></li>
                 </ul>
             </div>
         </div>
