--- a/src/app/Components/banner/banner.component.html
+++ b/src/app/Components/banner/banner.component.html
@@ -3,18 +3,17 @@
         <div class="grid md:grid-cols-3 gap-8">
             <div class="banner-content">
                 <h2 class="banner-contenet__title">
-                    Hi, I am John,
+                    Hi, I am Van Thanh,
                 </h2>
                 <h2 class="banner-contenet__title">
-                    Creative Technologist
+                    FrontEnd Developer
                 </h2>
-                <p class="banner-content__desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim velit
-                    mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                <a href="" class="btn btn-danger banner-content__button">Download Resume</a>
+                <p class="banner-content__desc">
+                    I am a sociable person, very interested in programming, currently I am studying at FPT Polytecnic School, my major is website design. For more details about me, download my CV</p>
+                <a href="../../../assets/image/Nguyen-Thi-Van.pdf" download="DowloadCv" class="btn btn-danger banner-content__button">Download CV</a>
             </div>
             <div class="banner-picsum">
-                <img src="https://picsum.photos/243/243" alt="" class="banner-picsum__thumb">
+                <img src="../../../assets/image/vanthanh.jpeg" alt="" class="banner-picsum__thumb">
             </div>
         </div>
     </div>
