--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -10,7 +10,7 @@
                 <ul class="hidden md:flex space-x-4">
                     <li><a routerLink="/work" class="text-[20px] font-bold">Works</a></li>
                     <li><a routerLink="/blog" class="text-[20px] font-bold">Blog</a></li>
-                    <li><a routerLink="index.html" class="text-[20px] font-bold">Contact</a></li>
+                    <li><a routerLink="contact" class="text-[20px] font-bold">Contact</a></li>
                     <li><a routerLink="/signin" class="text-[20px] font-bold">SignIn</a></li>
                     <li><a routerLink="/signup" class="text-[20px] font-bold">SignUP</a></li>
                 </ul>
