--- a/src/app/Pages/work-detail/work-detail.component.html
+++ b/src/app/Pages/work-detail/work-detail.component.html
@@ -2,30 +2,23 @@
     <div class="custom-container">
         <div class="top_project">
             <h2 class="project__name">{{work.workname}} </h2>
-            <h2 class="project__name">usability in mind</h2>
+            <!-- <h2 class="project__name">usability in mind</h2> -->
 
             <div class="project__meta">
                 <span class="project__create">{{work.year}}</span>
                 <a href="" class="project_category">{{work.status}}</a>
             </div>
-            <p class="project__desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-                sint. Velit officia
-                consequat duis enim velit
-                mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <img src="https://picsum.photos/681/460" alt="" class="py-10">
+            <p class="project__desc">{{work.desc}}</p>
+            <img src="{{work.img}}" alt="" class="py-10">
         </div>
         <div class="bottom-project">
-            <h1 class="text-[30px] font-bold">Heading 1</h1>
-            <h2 class="text-[26px] font-bold">Heading 2</h2>
+            <!-- <h1 class="text-[30px] font-bold">Heading 1</h1> -->
+            <!-- <h2 class="text-[26px] font-bold">Heading 2</h2> -->
 
-            <p class=" project__desc py-6">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-                Velit officia
-                consequat
-                duis enim velit
-                mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <!-- <p class=" project__desc py-6">{{work.desc}}.</p> -->
 
-            <img src="https://picsum.photos/681/460" alt="" class="pb-5">
-            <img src="https://picsum.photos/681/460" alt="" class="pb-5">
+            <!-- <img src="https://picsum.photos/681/460" alt="" class="pb-5"> -->
+            <!-- <img src="https://picsum.photos/681/460" alt="" class="pb-5"> -->
 
         </div>
     </div>
