--- a/src/app/Components/current-post/current-post.component.html
+++ b/src/app/Components/current-post/current-post.component.html
@@ -9,31 +9,16 @@
         </div>
         <div class="section-body">
             <div class="grid justify-evenly md:grid-cols-2 gap-8">
-                <div class="recent-post__item">
-                    <h1 class="recent-post__title">Making a design system from scratch</h1>
+
+               
+                <div *ngFor="let post of PostServiceList" class="recent-post__item">
+                    <h1 class="recent-post__title">{{post.title}}</h1>
                     <div class="recent-post__meta">
-                        <span class="text-[18] font-[500]">12 Feb 2020</span>
-                        <span>|</span>
-                        <a href="" class="text-[18] font-[500]">Design, Pattern</a>
-                    </div>
-                    <p class="recent-post__desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-                        sint. Velit officia
-                        consequat
-                        duis enim velit
-                        mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                </div>
-                <div class="recent-post__item">
-                    <h1 class="recent-post__title">Creating pixel perfect icons in Figma</h1>
-                    <div class="recent-post__meta">
-                        <span class="text-[18] font-[500]">12 Feb 2020</span>
+                        <span class="text-[18] font-[500]">{{post.date}}</span>
                         <span>|</span>
                         <a href="" class="text-[18] font-[500]">Figma, Icon Design</a>
                     </div>
-                    <p class="recent-post__desc">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-                        sint. Velit officia
-                        consequat
-                        duis enim velit
-                        mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p class="recent-post__desc">{{post.description}}</p>
                 </div>
             </div>
         </div>
