--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -6,12 +6,16 @@
             <form #formAuth="ngForm" (ngSubmit)="login(formAuth)"  >
                 <div class="mb-5">
                     <label for="email" class="block mb-2 text-sm font-medium text-gray-600">Email</label>
-                    <input type="text" ngModel name="email" class="block w-full p-3 rounded bg-gray-200 border border-transparent focus:outline-none">
+                    <input type="text"  name="email"
+                    #email="ngModel"
+                    ngModel class="block w-full p-3 rounded bg-gray-200 border border-transparent focus:outline-none">
                 </div>
         
                 <div class="mb-5">
                     <label for="password" class="block mb-2 text-sm font-medium text-gray-600">Password</label>
-                    <input  type="text" ngModel name="password" class="block w-full p-3 rounded bg-gray-200 border border-transparent focus:outline-none">
+                    <input  type="text"   name="password"
+                    #password="ngModel"
+                    ngModel  class="block w-full p-3 rounded bg-gray-200 border border-transparent focus:outline-none">
                 </div>
 
                 <button class="w-full p-3 mt-4 bg-gray-600 text-white rounded shadow">Login</button>
