--- a/src/app/Components/sibar/sibar.component.html
+++ b/src/app/Components/sibar/sibar.component.html
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li class="--set-active-forms-html">
-          <a href="forms.html">
+          <a href="/admin/a-block">
             <span class="icon"><i class="mdi mdi-square-edit-outline"></i></span>
             <span class="menu-item-label">Blog</span>
           </a>
